--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hello World</h1>
+---
+layout: default
+title: Blanks A clean slate for building a Jekyll site
+---
+
+<h1>{{ page.title }}</h1>
+
+{% for post in site.posts %}
+	<ol>
+		<li>
+	    {{ post.date | date: "%B %e, %Y" }}
+	    <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  </ol>
+{% endfor %}
