--- a/index.html
+++ b/index.html
@@ -2,14 +2,73 @@
 layout: default
 title: Welcome
 ---
+<section class="intro">
+	<div class="row">
+		<div class="large-9 columns">
+			<h1>A digital recipe box.</h1>
+			<p>These are some of my favorite recipes as well as some new ones I’m just trying out.</p>
+		</div>
+	</div>
+</section>
 
-<h1>{{ page.title }}</h1>
+<div class="recipe-list row">
 
-{% for post in site.posts %}
-	<ol>
-		<li>
-	    {{ post.date | date: "%B %e, %Y" }}
-	    <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  </ol>
-{% endfor %}
+	<!-- <div class="sidebar medium-4 columns">
+		<ul>
+			<li>
+				<div class="row">
+					<div class="key-icon medium-3 columns">
+						<div class="key-icon">
+							<img src="img/soup-icon.png">
+						</div>
+					</div>
+					<div class="key-text medium-9 columns">
+						<p>Soup</p>
+					</div>
+				</div>
+			</li>
+			<li>
+				<div class="row">
+					<div class="key-icon medium-3 columns">
+						<img src="img/side-icon.png">
+					</div>
+					<div class="key-text medium-9 columns">
+						<p>Side Dish</p>
+					</div>
+				</div>
+			</li>
+			<li>
+				<div class="row">
+					<div class="key-icon medium-3 columns">
+						<img src="img/main-icon.png">
+					</div>
+					<div class="key-text medium-9 columns">
+						<p>Main Course</p>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div> -->
+
+	<div class="large-7 large-centered columns">
+	{% for post in site.posts %}
+		<ol>
+			<li>
+				<div class="row">
+					<div class="large-2 columns">
+						<div class="category-icon">
+							<img src="img/{{ post.icon }}-icon.png">
+						</div>
+					</div>
+					<div class="large-10 columns">
+				    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+				    <div class="description">
+				    	<p>{{ post.description }}</p>
+				    </div>
+			    </div>
+			  </div>
+	    </li>
+	  </ol>
+	{% endfor %}
+	</div>
+</div><!-- End recipe-list -->
