remove test class

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: Welcome
   {% for post in site.posts %}
     <ol>
       <li>
-        <div class="row test">
+        <div class="row">
           <div class="large-2 columns">
             <div class="category-icon">
               <img src="img/{{ post.icon }}-icon.png">
