--- a/index.html
+++ b/index.html
@@ -10,65 +10,28 @@ title: Welcome
     </div>
   </div>
 </section>
-
-<div class="recipe-list row">
-
-  <!-- <div class="sidebar medium-4 columns">
-    <ul>
-      <li>
-        <div class="row">
-          <div class="key-icon medium-3 columns">
-            <div class="key-icon">
-              <img src="img/soup-icon.png">
+<section>
+  <div class="recipe-list row">
+    <div class="large-7 large-centered columns">
+    {% for post in site.posts %}
+      <ol>
+        <li>
+          <div class="row">
+            <div class="large-2 columns">
+              <div class="category-icon">
+                <img src="img/{{ post.icon }}-icon.png">
+              </div>
+            </div>
+            <div class="large-10 columns">
+              <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+              <div class="description">
+                <p>{{ post.description }}</p>
+              </div>
             </div>
           </div>
-          <div class="key-text medium-9 columns">
-            <p>Soup</p>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="row">
-          <div class="key-icon medium-3 columns">
-            <img src="img/side-icon.png">
-          </div>
-          <div class="key-text medium-9 columns">
-            <p>Side Dish</p>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="row">
-          <div class="key-icon medium-3 columns">
-            <img src="img/main-icon.png">
-          </div>
-          <div class="key-text medium-9 columns">
-            <p>Main Course</p>
-          </div>
-        </div>
-      </li>
-    </ul>
-  </div> -->
-
-  <div class="large-7 large-centered columns">
-  {% for post in site.posts %}
-    <ol>
-      <li>
-        <div class="row">
-          <div class="large-2 columns">
-            <div class="category-icon">
-              <img src="img/{{ post.icon }}-icon.png">
-            </div>
-          </div>
-          <div class="large-10 columns">
-            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-            <div class="description">
-              <p>{{ post.description }}</p>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ol>
-  {% endfor %}
-  </div>
-</div><!-- End recipe-list -->
+        </li>
+      </ol>
+    {% endfor %}
+    </div>
+  </div><!-- End recipe-list -->
+</section>
