--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Welcome
 ---
 <section class="intro">
   <div class="row">
-    <div class="large-9 columns">
-      <h1>A digital recipe box.</h1>
-      <p>These are some of my favorite recipes as well as some new ones I’m just trying out.</p>
+    <div class="large-8 columns">
+      <h1>Not a Fucking Food Blog.</h1>
+      <p>These are some of my favorite recipes as well as some new ones I’m just trying out&mdash;a digital recipe box.</p>
     </div>
   </div>
 </section>
