major style updates

--- a/index.html
+++ b/index.html
@@ -11,27 +11,23 @@ title: Welcome
   </div>
 </section>
 <section>
-  <div class="recipe-list row">
-    <div class="large-7 large-centered columns">
-    {% for post in site.posts %}
-      <ol>
-        <li>
-          <div class="row">
-            <div class="large-2 columns">
-              <div class="category-icon">
-                <img src="img/{{ post.icon }}-icon.png">
-              </div>
-            </div>
-            <div class="large-10 columns">
-              <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  <div class="recipe-list">
+    <div class="row">
+      <div class="large-6 medium-8 small-centered columns">
+        <header>
+          <h2>Latest recipes</h2>
+        </header>
+        {% for post in site.posts %}
+          <ol>
+            <li>
+              <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
               <div class="description">
                 <p>{{ post.description }}</p>
               </div>
-            </div>
-          </div>
-        </li>
-      </ol>
-    {% endfor %}
+            </li>
+          </ol>
+        {% endfor %}
+      </div>
     </div>
   </div><!-- End recipe-list -->
 </section>
