--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Welcome
         {% for post in site.posts %}
           <ol>
             <li>
-              <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+              <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
               <div class="description">
                 <p>{{ post.description }}</p>
               </div>
