--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Welcome
   <div class="row">
     <div class="large-12 columns">
       <h1>Not a Fucking Food Blog.</h1>
-      <p>These are some of my favorite recipes as well as some new ones I’m just trying out&mdash;a digital recipe box.</p>
+      <p>These are some of my favorite recipes as well as some new ones I’m just trying out&mdash;a digital recipe book.</p>
     </div>
   </div>
 </section>
