--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 title: Welcome
-bodyClass: home
+body: home-page
 ---
 <section class="intro">
   <div class="row">
-    <div class="large-8 columns">
+    <div class="large-10 columns">
       <h1>Not a Fucking Food Blog.</h1>
       <p>These are some of my favorite recipes as well as some new ones I’m just trying out&mdash;a digital recipe book.</p>
     </div>
