--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body: home-page
   <div class="row">
     <div class="large-10 columns">
       <h1>Not a Food Blog.</h1>
-      <p>These are some of my favorite recipes as well as some new ones I’m just trying out&mdash;a digital recipe book.</p>
+      <p>A digital recipe book&mdash;These are some of my favorite along with some new ones I’m just trying out.</p>
     </div>
   </div>
 </section>
