--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
+title: Home
 layout: default
-title: Welcome
 body: home-page
+
 ---
 <section class="intro">
   <div class="row">
     <div class="large-10 columns">
-      <h1>Not a Food Blog.</h1>
-      <p>A digital recipe book&mdash;These are some of my favorite along with some new ones I’m just trying out.</p>
+      <h1>{{ site.title }}</h1>
+      <p>{{ site.tagline }}</p>
     </div>
   </div>
 </section>
