refactoring typography styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 title: Home
 layout: default
 body: home-page
-
 ---
 <section class="intro">
   <div class="row">
@@ -16,7 +15,7 @@ body: home-page
   <div class="recipe-list">
     <div class="row">
       <div class="large-7 medium-10 small-centered columns">
-        <section id="recent-recipes">
+        <div id="recent-recipes">
           <header>
             <h2>Latest recipes</h2>
           </header>
@@ -33,7 +32,7 @@ body: home-page
               </li>
             </ul>
           {% endfor %}
-        </section>
+        </div>
       </div>
     </div>
   </div><!-- End recipe-list -->
