--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ body: home-page
 ---
 <section class="intro">
   <div class="row">
-    <div class="large-10 columns">
+    <div class="small-12 columns">
       <h1>{{ site.title }}</h1>
       <p>{{ site.tagline }}</p>
     </div>
